# https---github.com-Timothy-Coulter-backtest_base

./: CODE_REVIEW_REPORT.md  INTEGRATION_TEST_PLAN.md  MODEL_DESIGN_PLAN.md  README.md  __init__.py  backtester_architecture_analysis.md  main.py  mypy.ini  optuna_grid_search.db  pyproject.toml  test_data_handler_manual.py
backtester/: __init__.py  main.py
backtester/core/: __init__.py  backtest_engine.py  config.py  config_processor.py  event_bus.py  logger.py  performance.py
backtester/data/: __init__.py  data_handler.py  data_retrieval.py
backtester/execution/: __init__.py  broker.py  order.py
backtester/indicators/: __init__.py  atr.py  base_indicator.py  bollinger_bands.py  cci.py  ema.py  macd.py  obv.py  rsi.py  sma.py  stochastic.py  williams_r.py
backtester/model/: __init__.py  base_model.py  model_configs.py  model_factory.py  sklearn_models.py
backtester/model/framework_adapters/: __init__.py  pytorch_adapter.py  scipy_adapter.py  sklearn_adapter.py
backtester/optmisation/: __init__.py  objective.py  parameter_space.py  runner.py  study_manager.py
backtester/portfolio/: __init__.py  base_portfolio.py  dual_pool_portfolio.py  general_portfolio.py  pool_state.py  portfolio.py  position.py  risk_controls.py  risk_manager.py
backtester/risk_management/: __init__.py  position_sizing.py  risk_control_manager.py  risk_limits.py  risk_metrics_calculator.py  risk_monitor.py  risk_profile.py  risk_signals.py  stop_loss.py  take_profit.py
backtester/risk_management/component_configs/: __init__.py  comprehensive_risk_config.py  position_sizing_config.py  risk_limit_config.py  risk_monitoring_config.py  stop_loss_config.py  take_profit_config.py
backtester/signal/: signal_types.py
backtester/strategy/: __init__.py  base.py  moving_average.py
backtester/strategy/orchestration/: orchestration_strategy_config.py
backtester/strategy/portfolio/: __init__.py  base_portfolio_strategy.py  kelly_criterion_strategy.py
backtester/strategy/signal/: base_signal_strategy.py
backtester/utils/: __init__.py  cache_utils.py  data_utils.py  db_manager.py  format_utils.py  math_utils.py  string_utils.py  time_utils.py  validation_utils.py
scripts/: example_1.py
src/: compute_mu_sigma.py  db_manager.py  multiple_datasets.py  run_sim.py  run_trial.py  run_trial_constrained.py  utils.py
tests/: __init__.py  conftest.py  test_fixtures.py  test_integration.py  test_main.py
tests/core/: __init__.py  test_backtest_engine.py  test_config.py  test_event_bus.py  test_logger.py  test_performance.py
tests/data/: __init__.py  test_data_handler.py  test_data_retrieval.py
tests/execution/: __init__.py  test_broker.py  test_order.py
tests/indicators/: test_base_indicator.py  test_factory.py
tests/integration/: conftest.py  test_component_integration.py  test_data_in  test_data_integration.py  test_data_retrieval_integration.py  test_edge_cases.py  test_end_to_end_workflows.py  test_event_driven_engine.py  test_optimization_integration.py  test_performance_scalability.py
tests/model/: __init__.py  test_base_model.py  test_model_configs.py  test_model_factory.py
tests/optimisation/: test_base.py  test_runner.py
tests/portfolio/: __init__.py  test_base_portfolio.py  test_dual_pool.py  test_general_portfolio.py  test_pool_state.py  test_portfolio.py  test_position.py  test_risk_controls.py  test_risk_manager.py
tests/risk_management/: test_position_sizing.py  test_risk_control_manager.py  test_risk_limits.py  test_risk_metrics_calculator.py  test_risk_monitor.py  test_risk_profile.py  test_risk_signals.py  test_stop_loss.py  test_take_profit.py
tests/strategy/: __init__.py  test_base.py  test_moving_average.py
tests/utils/: test_cache_utils.py  test_data_utils.py  test_format_utils.py  test_math_utils.py  test_string_utils.py  test_time_utils.py  test_validation_utils.py
