[project]
name = "quant-bench"
version = "0.1.0"
description = "Quantitative Backtesting Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.9.0",
    "findatapy>=0.1.40",
    "fmp-python>=0.1.5",
    "isort>=7.0.0",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "numpy>=2.2.6",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.0.0",
    "ruff>=0.14.3",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "types-psutil>=7.0.0.20251001",
    "yfinance>=0.2.66",
]
authors = [
    {name = "Quant Bench Team", email = "team@quantbench.com"}
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
# Testing and development dependencies
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-rerunfailures>=12.0",
    "coverage[toml]>=7.0.0",
    "hypothesis>=6.0.0",
]

# Development dependencies (linting, formatting, type checking)
dev = [
    "mypy>=1.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
    "types-setuptools",
]

# All development and testing dependencies
all = [
    "mypy>=1.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "ruff>=0.1.0",
    "types-setuptools",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-rerunfailures>=12.0",
    "coverage[toml]>=7.0.0",
    "hypothesis>=6.0.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "SIM",# flake8-simplify
  "C90",# mccabe complexity
  "D",  # pydocstyle (docstrings)
]
ignore = [
  "E501",  # handled by formatter
  "N999",  # directory name is outside of code control - has dashes and special chars
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
namespace_packages = true
explicit_package_bases = true
mypy_path = "$MYPY_CONFIG_FILE_DIR"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]

# Ignore missing stubs for external libraries
[[tool.mypy.overrides]]
module = [
    "yfinance.*",
    "matplotlib.*",
    "optuna.*",
    "numpy.*",
    "pandas.*",
    "psycopg2.*",
    "pydantic.*",
    "sklearn.*",
    "scipy.*",
    "tqdm.*",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--reruns=3 --reruns-delay=1"

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
# Source files to include in coverage
source = ["backtester"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/setup.py",
    "*/mypy.ini",
    "*/conftest.py",
    "*/fixtures/*",
    "*/test_fixtures.py",
    "*/src/*",
    "*/scripts/*",
    "*/*/__init__.py",
    "*/*/main.py",
]

[tool.coverage.report]
# Coverage reporting options
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

precision = 2
show_missing = true
skip_covered = false
sort = "Cover"
fail_under = 80

# Ignore missing files
ignore_errors = false

# Line exclusions
ignore_missing_scripts = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# =============================================================================
# Build System and Scripts
# =============================================================================

[project.scripts]
quant-bench = "backtester.main:main"
quant-backtest = "backtester.main:run_modular_backtest"

[tool.hatch.build.targets.wheel]
packages = ["backtester"]
